fix: broken responsive behavior on mobile devices (#1128)
* fix: broken responsive behavior on mobile devices

* chore: tweak values for better responsiveness

--- a/website/src/css/customTheme.css
+++ b/website/src/css/customTheme.css
@@ -941,6 +941,7 @@ a:hover {
   background: #0a0a0a;
   width: 50%;
   height: 100%;
+  overflow: hidden;
 }
 
 .oss-promo-cta {
@@ -980,7 +981,7 @@ a:hover {
 .event-card {
   border-style: solid;
   border-color: #fff;
-  box-shadow: 0 4px 23px rgb(0 0 0 / 10%));
+  box-shadow: 0 4px 23px rgb(0 0 0 / 10%);
   font-size: 0.95rem;
   font-family: MaisonNeue-Light, sans-serif;
   font-weight: 700;
@@ -1354,7 +1355,11 @@ a:hover {
     width: 100vw;
     height: 50vh;
   }
-
+  
+  .hero-infograph {
+    overflow: hidden;
+  }
+  
   .hldesign-graphic {
     width: 100%;
   }
@@ -1501,7 +1506,7 @@ a:hover {
   }
 
   .endcta-text {
-    font-size: 2.4rem;
+    font-size: 1.7rem;
   }
 
   .navbar {
@@ -1552,7 +1557,7 @@ a:hover {
   }
 
   .endcta-text {
-    font-size: 2rem;
+    font-size: 1.6rem;
   }
 
   .arch-head,
